Split the vignettes out from the old GenomicBreaks package.
The problem was that they depend on data distributed via drat.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,19 @@
-Package: GenomicBreaks
+Package: OikScrambling
 Type: Package
 Title: Pairwise Alignment Breakpoint Analysis
 Version: 0.1.0
-Author: Charlotte West
-Maintainer: Charlotte West <charwest1@hotmail.co.uk>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: 
+    person(given = "Charles",
+           family = "Plessy",
+           role = c("aut", "cre"),
+           email = "charles.plessy@oist.jp",
+           comment = c(ORCID = "0000-0001-7410-6295"))
+Description: Analysis of the Oikopleura breakpoint dataset for the scrambling
+    project.
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 3.6.0)
+Depends: R (>= 4.1.0)
 Imports:
   CNEr,
   rtracklayer,
@@ -37,34 +41,3 @@ Suggests:
   magrittr,
   rmarkdown
 VignetteBuilder: knitr
-Collate: 
-    'GenomicBreaks.R'
-    'align_scaf_plot_2.R'
-    'bp_coverage.R'
-    'bp_heatmap.R'
-    'bp_pair_analysis.R'
-    'chain_contigs.R'
-    'dist2next.R'
-    'coalesce_contigs.R'
-    'correlation_index.R'
-    'feature_coverage.R'
-    'flagInterruptions.R'
-    'flagInversions.R'
-    'flagInsersions.R'
-    'flagColinearAlignments.R'
-    'flagAll.R'
-    'getRefGenome.R'
-    'get_bps.R'
-    'int_frag.R'
-    'inv2UCSCData.R'
-    'load_genomic_breaks.R'
-    'load_one_to_ones.R'
-    'longestMatchesInTarget.R'
-    'makeInversions.R'
-    'master_bp_analysis.R'
-    'scaf_align_plot.R'
-    'serviceFunctions.R'
-    'strandNames.R'
-    'swap.R'
-    'synteny_index.R'
-    'tan_bp.R'
