https://oist.github.io/plessy_oikgenomes_drat/
See https://journal.r-project.org/archive/2017/RJ-2017-026

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Authors@R:
            email = "charles.plessy@oist.jp",
            comment = c(ORCID = "0000-0001-7410-6295"))
 Description: Analysis of the Oikopleura breakpoint dataset for the scrambling
-    project.
+    project.  The data is distributed in a drat repository on GitHub at
+    <https://oist.github.io/plessy_oikgenomes_drat/>.
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -41,3 +42,4 @@ Suggests:
   magrittr,
   rmarkdown
 VignetteBuilder: knitr
+Additional_repositories: https://oist.github.io/plessy_oikgenomes_drat/
