--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Imports:
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 Suggests:
+  BreakpointsData (>= 3.1.0)
   BSgenome.Odioica.local.OKI2018.I69,
   BSgenome.Odioica.local.OSKA2016,
   BSgenome.Odioica.local.Odioica.reference.v3.0,
