Update title and URL.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: OikScrambling
 Type: Package
-Title: Pairwise Alignment Breakpoint Analysis
+Title: Oikopleura Genome Comparison Study
 Version: 0.1.0
 Authors@R: 
     person(given = "Charles",
@@ -11,6 +11,7 @@ Authors@R:
 Description: Analysis of the Oikopleura breakpoint dataset for the scrambling
     project.  The data is distributed in a drat repository on GitHub at
     <https://oist.github.io/plessy_oikgenomes_drat/>.
+URL: https://github.com/oist/LuscombeU_OikScrambling
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
