--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: OikScrambling
 Type: Package
 Title: Oikopleura Genome Comparison Study
-Version: 0.1.0
+Version: 0.2.0
+Date: 2021-09-15
 Authors@R: 
     person(given = "Charles",
            family = "Plessy",
