Use the functions newly exported by GenomicBreaks.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ URL: https://github.com/oist/LuscombeU_OikScrambling
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 4.1.0)
+Depends:
+  R (>= 4.1.0),
+  GenomicBreaks (>= 0.6.0)
 Imports:
   CNEr,
   rtracklayer,
