Accessory function to load all BSgenome packages we need.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Encoding: UTF-8
 LazyData: true
 Depends:
   R (>= 4.1.0),
-  GenomicBreaks (>= 0.6.0)
+  GenomicBreaks (>= 0.6.0),
+  BSgenome
 Imports:
   CNEr,
   rtracklayer,
@@ -33,13 +34,16 @@ Imports:
   Biostrings,
   BSgenome,
   weights
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 Suggests:
   BreakpointsData (>= 3.1.0),
   BSgenome.Odioica.local.OKI2018.I69,
-  BSgenome.Odioica.local.OSKA2016,
+  BSgenome.Odioica.local.OSKA2016v1.9,
   BSgenome.Odioica.local.Odioica.reference.v3.0,
+  BSgenome.Odioica.local.Bar2.p4,
+  BSgenome.Odioica.local.KUM.M3,
+  BSgenome.Odioica.local.AOM.5,
   genoPlotR,
   ggplot2,
   gridExtra,
