Also load ggplot2 by default.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,9 @@ Encoding: UTF-8
 LazyData: true
 Depends:
   R (>= 4.1.0),
+  BSgenome,
   GenomicBreaks (>= 0.6.0),
-  BSgenome
+  ggplot2
 Imports:
   CNEr,
   rtracklayer,
