add plyranges, remove magrittr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,7 @@ Suggests:
   gridExtra,
   Gviz,
   knitr,
-  magrittr,
+  plyranges,
   rmarkdown
 VignetteBuilder: knitr
 Additional_repositories: https://oist.github.io/plessy_oikgenomes_drat/
