UpSetR plots for repeat annotations.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,7 @@ Suggests:
   Gviz,
   knitr,
   plyranges,
-  rmarkdown
+  rmarkdown,
+  UpSetR
 VignetteBuilder: knitr
 Additional_repositories: https://oist.github.io/plessy_oikgenomes_drat/
