add dN/dS values to GBreaks objects!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,3 +54,12 @@ Suggests:
   UpSetR
 VignetteBuilder: knitr
 Additional_repositories: https://oist.github.io/plessy_oikgenomes_drat/
+Collate: 
+    'OikScrambling.R'
+    'addMetadataToGRanges.R'
+    'compDistance.R'
+    'loadAllAnnotations.R'
+    'loadAllGenomes.R'
+    'loadAllRepeats.R'
+    'loadAllTranscriptGRs.R'
+    'loaddNdSTable.R'
