--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 2.9.2.1
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  CoalescingCutoffs: CoalescingCutoffs.html
   ColinearityInterruptors: ColinearityInterruptors.html
   DistanceMeasures: DistanceMeasures.html
   GenomicFeatures: GenomicFeatures.html
@@ -15,5 +16,5 @@ articles:
   RegionWidths: RegionWidths.html
   RepeatRegions: RepeatRegions.html
   Translocations: Translocations.html
-last_built: 2021-12-08T01:48Z
+last_built: 2021-12-09T03:29Z
 
