--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,24 @@
 Package: OikScrambling
 Type: Package
 Title: Oikopleura Genome Comparison Study
-Version: 0.6.4
-Date: 2021-12-13
-Authors@R: 
+Version: 0.6.5
+Date: 2021-12-15
+Authors@R: c(
+    person(given = "Aleksandra",
+           family = "Bliznina",
+           role = c("aut", "cre"),
+           email = "Aleksandra.Bliznina2@oist.jp",
+           comment = c(ORCID = "0000-0001-5031-8023")),
+    person(given = "Michael",
+           family = "Mansfield",
+           role = c("aut", "cre"),
+           email = "michael.mansfield@oist.jp",
+           comment = c(ORCID = "0000-0003-4717-4721")),
     person(given = "Charles",
            family = "Plessy",
            role = c("aut", "cre"),
            email = "charles.plessy@oist.jp",
-           comment = c(ORCID = "0000-0001-7410-6295"))
+           comment = c(ORCID = "0000-0001-7410-6295")))
 Description: Analysis of the Oikopleura breakpoint dataset for the scrambling
     project.  The data is distributed in a drat repository on GitHub at
     <https://oist.github.io/plessy_oikgenomes_drat/>.
