--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,12 +6,12 @@ Date: 2021-12-24
 Authors@R: c(
     person(given = "Aleksandra",
            family = "Bliznina",
-           role = c("aut", "cre"),
+           role = c("aut"),
            email = "Aleksandra.Bliznina2@oist.jp",
            comment = c(ORCID = "0000-0001-5031-8023")),
     person(given = "Michael",
            family = "Mansfield",
-           role = c("aut", "cre"),
+           role = c("aut"),
            email = "michael.mansfield@oist.jp",
            comment = c(ORCID = "0000-0003-4717-4721")),
     person(given = "Charles",
