--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -15,6 +15,7 @@ articles:
   ParallelPlots: ParallelPlots.html
   RegionWidths: RegionWidths.html
   RepeatRegions: RepeatRegions.html
+  SegmentMovements: SegmentMovements.html
   Translocations: Translocations.html
-last_built: 2022-01-14T05:50Z
+last_built: 2022-01-25T09:02Z
 
