--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: OikScrambling
 Type: Package
 Title: Oikopleura Genome Comparison Study
-Version: 0.8.3
-Date: 2021-02-09
+Version: 1.0.0
+Date: 2021-02-10
 Authors@R: c(
     person(given = "Aleksandra",
            family = "Bliznina",
@@ -51,12 +51,12 @@ RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 Suggests:
   BreakpointsData (>= 3.8.0),
-  BSgenome.Odioica.local.OKI2018.I69,
-  BSgenome.Odioica.local.OSKA2016v1.9,
-  BSgenome.Odioica.local.Odioica.reference.v3.0,
-  BSgenome.Odioica.local.Bar2.p4,
-  BSgenome.Odioica.local.KUM.M3,
-  BSgenome.Odioica.local.AOM.5,
+  BSgenome.Oidioi.OIST.OKI2018.I69,
+  BSgenome.Oidioi.OIST.OSKA2016v1.9,
+  BSgenome.Oidioi.genoscope.OdB3,
+  BSgenome.Oidioi.OIST.Bar2.p4,
+  BSgenome.Oidioi.OIST.KUM.M3.7f,
+  BSgenome.Oidioi.OIST.AOM.5.5f,
   genoPlotR,
   ggplot2,
   gridExtra,
