--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -21,10 +21,11 @@ articles:
   RepeatRegions: RepeatRegions.html
   ScalingBreakpoints: ScalingBreakpoints.html
   SegmentMovements: SegmentMovements.html
+  SquareWindowPlots: SquareWindowPlots.html
   TFBS: TFBS.html
   TandemSiteDuplications: TandemSiteDuplications.html
   Translocations: Translocations.html
-last_built: 2023-05-08T06:47Z
+last_built: 2023-05-09T00:40Z
 urls:
   reference: https://oist.github.io/LuscombeU_OikScrambling/reference
   article: https://oist.github.io/LuscombeU_OikScrambling/articles
