One more Supplemental Vignette

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,5 +12,7 @@ navbar:
       menu:
        - text: 'Figure 1A DNA line plots'
          href: articles/OxfordPlots.html
+       - text: 'Figure 1B chromosome parallel plots'
+         href: articles/ParallelPlots.html
        - text: 'Figure 7 DNA line plots'
          href: articles/SquareWindowPlots.html
