Scrambling index in Table 1.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,5 +14,7 @@ navbar:
          href: articles/OxfordPlots.html
        - text: 'Figure 1B chromosome parallel plots'
          href: articles/ParallelPlots.html
+       - text: 'Table 1 scrambling index'
+         href: articles/DistanceMeasures.html
        - text: 'Figure 7 DNA line plots'
          href: articles/SquareWindowPlots.html
