Add one supplemental file to the menu.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,3 +18,5 @@ navbar:
          href: articles/DistanceMeasures.html
        - text: 'Figure 7 DNA line plots'
          href: articles/SquareWindowPlots.html
+       - text: 'Figure 7 breakpoint number barplots'
+         href: articles/ScalingBreakpoints.html
