--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,8 @@ navbar:
          href: articles/ParallelPlots.html
        - text: 'Table 1 scrambling index'
          href: articles/DistanceMeasures.html
+       - text: 'Figure 5 genome-wide feature patterns'
+         href: articles/ChromosomePlots.html
        - text: 'Figure 7 DNA line plots'
          href: articles/SquareWindowPlots.html
        - text: 'Figure 7 breakpoint number barplots'
