--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -8,6 +8,7 @@ articles:
   ColinearityInterruptors: ColinearityInterruptors.html
   DistanceMeasures: DistanceMeasures.html
   GenomicFeatures: GenomicFeatures.html
+  GenomicHeatmaps: GenomicHeatmaps.html
   Inversions: Inversions.html
   LoadGenomicBreaks: LoadGenomicBreaks.html
   OikScrambling: OikScrambling.html
@@ -26,7 +27,7 @@ articles:
   TFBS: TFBS.html
   TandemSiteDuplications: TandemSiteDuplications.html
   Translocations: Translocations.html
-last_built: 2023-06-02T01:20Z
+last_built: 2023-07-21T06:22Z
 urls:
   reference: https://oist.github.io/LuscombeU_OikScrambling/reference
   article: https://oist.github.io/LuscombeU_OikScrambling/articles
