Generate Supplmementary figure 2 and advertise.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,12 +10,14 @@ navbar:
     supmat:
       text: Supplemental material
       menu:
-       - text: 'Figure 1A DNA line plots'
+       - text: 'Figure 1B DNA line plots'
          href: articles/OxfordPlots.html
-       - text: 'Figure 1B chromosome parallel plots'
+       - text: 'Figure 1C chromosome parallel plots'
          href: articles/ParallelPlots.html
-       - text: 'Table 1 scrambling index'
+       - text: 'Figure 1D scrambling index'
          href: articles/DistanceMeasures.html
+       - text: 'Figure 2A orthogroup dot plots'
+         href: articles/OrthogroupSyntenies.html
        - text: 'Figure 5 genome-wide feature patterns'
          href: articles/ChromosomePlots.html
        - text: 'Figure 7 DNA line plots'
