--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,7 +20,7 @@ navbar:
          href: articles/OrthogroupSyntenies.html
        - text: 'Figure 5 genome-wide feature patterns'
          href: articles/ChromosomePlots.html
-       - text: 'Figure 7 DNA line plots'
+       - text: 'Figure 7A–D DNA line plots'
          href: articles/SquareWindowPlots.html
-       - text: 'Figure 7 breakpoint number barplots'
+       - text: 'Figure 7E breakpoint number barplots'
          href: articles/ScalingBreakpoints.html
