Simplify synteny block histograms.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,7 +16,7 @@ navbar:
          href: articles/ParallelPlots.html
        - text: 'Figure 1D scrambling index'
          href: articles/DistanceMeasures.html
-       - text: 'Figure 2A orthogroup dot plots'
+       - text: 'Figure 2A orthogroup dot plots and synteny block histograms'
          href: articles/OrthogroupSyntenies.html
        - text: 'Figure 5 genome-wide feature patterns'
          href: articles/ChromosomePlots.html
