Mention supplemental figures and correct panel numbers.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,13 +10,13 @@ navbar:
     supmat:
       text: Supplemental material
       menu:
-       - text: 'Figure 1B DNA line plots'
+       - text: 'Figure 1B and S1 DNA line plots'
          href: articles/OxfordPlots.html
        - text: 'Figure 1C chromosome parallel plots'
          href: articles/ParallelPlots.html
        - text: 'Figure 1D scrambling index'
          href: articles/DistanceMeasures.html
-       - text: 'Figure 2A orthogroup dot plots and synteny block histograms'
+       - text: 'Figure 2A and S1 orthogroup dot plots and synteny block histograms'
          href: articles/OrthogroupSyntenies.html
        - text: 'Figure 5 genome-wide feature patterns'
          href: articles/ChromosomePlots.html
