Split vignette and add supplement
 - OperonDetection split aout of GenomicFeatures

 - Show breakpoint coverage plots for more pairs of genomes

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,6 +18,10 @@ navbar:
          href: articles/DistanceMeasures.html
        - text: 'Figure 2A and S1 orthogroup dot plots and synteny block histograms'
          href: articles/OrthogroupSyntenies.html
+       - text: 'Figure 3C breakpoint feature density plots'
+         href: articles/GenomicFeatures.html
+       - text: 'Figure 4B and 4C operon barplots'
+         href: articles/OperonDetection.html
        - text: 'Figure 5 genome-wide feature patterns'
          href: articles/ChromosomePlots.html
        - text: 'Figure 7A–D DNA line plots'
